# fiscalidade

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: consultar_autorizacao.rs  consultar_protocolo.rs  consultar_xml.rs  status_servico.rs
resources/: build_webservices.sh  webservices.ini  webservices.toml
src/: client.rs  dfe.rs  lib.rs  pkcs12.rs  soap.rs  soap12.rs  tipos.rs  util.rs  webservices.rs
