[package]
name = "fiscalidade"
version = "0.5.1"
authors = ["Silvio Clecio (silvioprog) <silvioprog@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Biblioteca Rust para validação, assinatura e transmissão de XMLs para webservices SEFAZ."
homepage = "https://github.com/risoflora/fiscalidade"
repository = "https://github.com/risoflora/fiscalidade"
readme = "README.md"
keywords = ["nfe", "sped", "sefaz"]
categories = ["network-programming", "web-programming"]
edition = "2018"

[features]
default = ["embed_webservices"]
embed_webservices = []

[dependencies]
tokio = { version = "1", features = ["fs"] }
reqwest = { version = "0.11", features = ["gzip", "native-tls"] }
rust-ini = { version = "0.17", features = ["case-insensitive"] }
thiserror = "1"
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
anyhow = "1"
